apps/base/omni-tools/omni-tools-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-tools-ingressroute
  annotations:
    gethomepage.dev/href: "https://${SUBDOMAIN:=omni-tools}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "omni-tools"
    gethomepage.dev/description: "Collection of powerful web-based tools"
    gethomepage.dev/app: omni-tools
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://github.com/iib0011/omni-tools/blob/main/src/assets/logo.png"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`${SUBDOMAIN:=omni-tools}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: omni-tools
          port: 80
